# heat_calc

./: CMakeLists.txt  collect_paraview.sh  do_cmake.sh  do_cmake_intel.sh  epw_notes.txt  fix_ptrace_scope.sh  run.sh  run_advixe.sh  run_gdb.sh  run_vtune.sh  source_deps.sh  source_deps_intel.sh
include/: EpwExtractor.h  EpwReader.h  ProjectDefs.h  WeatherFileHelper.h  WeatherFileReader.h  WeatherFileWriter.h  heat_surfaces.h
include/discretization/: DirichletBC.h  DirichletBC_defs.h  NeumannBC.h  NeumannBC_defs.h  boundary_condition.h  disc_vector.h  discretization.h  dof_numbering.h  model.h  source_term.h  surface_discretization.h  volume_discretization.h
include/file/: DataExtractor.h  EpwReader.h  EpwSegmenter.h  WeatherCat.h  WeatherFileHelper.h  date_range.h  input_parser.h
include/linear_system/: assembler.h  augmented_assembler.h  bla_wrapper.h  large_matrix.h  large_matrix_dense.h  large_matrix_factory.h  large_matrix_petsc.h  sparsity_pattern.h  sparsity_pattern_augmented.h  sparsity_pattern_dense.h  sparsity_pattern_mesh.h
include/mesh/: FieldDataManager.h  apfMDSField.h  apfMDSFieldReduction.h  apfMDSFieldSynchronize.h  apfShapeHex.h  apfSplit.h  apf_data.h  dirichlet_update_map.h  dof_numbering.h  face_group.h  ghosting.h  gmiDataStructure.h  mesh.h  mesh_block.h  mesh_generator.h  mesh_generator_multi.h  mesh_generator_multi_block.h  mesh_geometry_multi.h  mesh_helper.h  mesh_input.h  reference_element.h  reference_element_apf.h  reference_element_def.h  reference_element_geometry.h  reference_element_geometry_def.h  reference_element_geometry_hex.h  reference_element_geometry_types.h  reference_element_interface.h  reference_element_nodes.h  tensor_product_mapper.h  volume_group.h
include/physics/: AuxiliaryEquations.h  PhysicsModel.h  post_processor_base.h  post_processor_manager.h  post_processor_scheduler.h  post_processors.h
include/simple_house/: geometry_generator.h  input_parsing.h  simple_house_spec.h
include/time_solver/: crank_nicolson.h  crank_nicolson_aux_equations.h  crank_nicolson_function.h  newton.h  newton_result.h  time_stepper_opts.h  timestep_controller.h  timestep_controller_piecewise.h
include/utils/: bounding_box.h  error_handling.h  initialization.h  lagrange.h  lagrange2d.h  lagrange_basis.h  legendre.h  math.h  memory.h  mpi_utils.h  parallel_exchange.h  quadrature.h  spline.h  (+1 more)
scripts/: compute_net_hvac.py  cp_results.sh  extract_weeks.sh  get_nrel_data.py  make_timeseries.sh  nusselt.py  plot_simple_house.py  sparsity_plot.py  spline.py  use_diyepw.py
src/: CMakeLists.txt  EpwExtractor.cc  EpwReader.cc  EpwSegmenter.cc  WeatherFileHelper.cc  WeatherFileReader.cc  WeatherFileWriter.cc  main.cc  memory_alloc.cc  simple_house.cc  simple_house2.cc
src/discretization/: DirichletBC.cc  disc_vector.cc  discretization.cc  dof_numbering.cc  model.cc  surface_discretization.cc  volume_discretization.cc
src/executables/: data_extractor.cc  epw_extractor.cc  simple_heat.cc  wea_cat.cc
src/file/: DataExtractor.cc  EpwExtractor.cc  EpwReader.cc  EpwSegmenter.cc  WeatherCat.cc  WeatherFileHelper.cc  WeatherFileReader.cc  WeatherFileWriter.cc  input_parser.cc
src/linear_system/: assembler.cc  bla_wrapper.cc  large_matrix.cc  large_matrix_dense.cc  large_matrix_factory.cc  large_matrix_petsc.cc  sparsity_pattern_augmented.cc  sparsity_pattern_mesh.cc
src/mesh/: CMakeLists.txt  FieldDataManager.cc  apfMDSField.cc  apfShapeHex.cc  apf_data.cc  dirichlet_update_map.cc  dof_numbering.cc  generate_mesh.cc  ghosting.cc  gmiDataStructure.cc  mesh.cc  mesh_block.cc  mesh_generator.cc  mesh_generator_multi.cc  mesh_generator_multi_block.cc  mesh_geometry_multi.cc  mesh_helper.cc  reference_element.cc  reference_element_apf.cc  reference_element_def.cc  reference_element_geometry.cc  reference_element_geometry_def.cc  reference_element_geometry_hex.cc  reference_element_geometry_interface.cc  reference_element_geometry_types.cc  reference_element_interface.cc  reference_element_nodes.cc
src/physics/: AuxiliaryEquations.cc  PhysicsModel.cc  post_processor_manager.cc  post_processors.cc
src/physics/heat/: AuxiliaryEquationsSolar.cc  HeatEquation.cc  HeatEquationSolar.cc  air_leakage.cc  basis_vals.cc  bc_defs.cc  dates.cc  dirichlet_bc.cc  environment_interface.cc  environment_interface_weather_file.cc  hvac_model.cc  interior_temperature_update.cc  mass_matrix.cc  neumann_bc.cc  post_processor_environment_data.cc  post_processor_interior.cc  sky_radiation.cc  solar_position.cc  source_term.cc  steady_state_temp_calculator.cc  tarp.cc  volume_term.cc
src/simple_house/: geometry_generator.cc  input_parsing.cc  simple_house_spec.cc
src/time_solver/: crank_nicolson.cc  crank_nicolson_aux_equations.cc  crank_nicolson_function.cc  newton.cc  newton_result.cc  time_stepper_opts.cc
src/utils/: error_handling.cc  initialization.cc  lagrange.cc  lagrange_basis.cc  legendre.cc  mpi_utils.cc  quadrature.cc  string_utils.cc
test/: CMakeLists.txt  arguments_setup.h  gtest_main.cc  mesh_helper.cc  mesh_helper.h  test_air_leakage.cc  test_augmented_assembler.cc  test_auxiliary_equations_solar.cc  test_bounding_box.cc  test_combined_air_wind_sky_bc.cc  test_crank_nicolson.cc  test_crank_nicolson_dependent.cc  test_crank_nicolson_dependent2.cc  test_data_extractor.cc  test_date.cc  test_disc_vector.cc  test_dof_numbering.cc  test_environment_interface.cc  test_environment_interface_weather_file.cc  test_epw_extractor.cc  test_epw_reader.cc  test_epw_segmenter.cc  test_floor_radiation_model.cc  test_ghosting.cc  test_gmi_data_structure.cc  test_heat_equation.cc  test_heat_equation_nonlinear_neumann.cc  test_heat_equation_solar.cc  test_heat_source_term.cc  test_helper.cc  test_helper.h  test_hvac_model.cc  test_input_parser.cc  test_interior_loads.cc  test_interior_temperature_update.cc  test_julian_date.cc  test_large_matrix_dense.cc  test_large_matrix_petsc.cc  test_math.cc  test_mds_numbering.cc  (+36 more)
test/data/: USA_AZ_Phoenix-Sky.Harbor.Intl.AP.722780_TMY3.epw  epw_shortened.epw
test/verification/: test_heat_mms.cc  test_hot_wall.cc
(+32 files in other folders)
